2005-12-31  Simos Xenitellis  <simos@gnome.org>

	* gweather-gconf.c: Added translator comments for the DEFAULT_*
	strings, the strings to specify the default location per locale.

2005-12-11  Philip Langdale  <philipl@mail.utexas.edu>

	A gweather-gconf.c
	A gweather-gconf.h
	A gweather-prefs.c
	A gweather-prefs.h
	A gweather.schemas.in: Merge libgweatherprefs into
	libgweather. The extra library isn't worth the hassle
	considering that gconf is already a dependency of
	libgweather and we currently have no clients that want
	the backend without the prefs.

	I have merged the libgweathepref ChangeLong entries.

	* .cvsignore
	* ChangeLog
	* Makefile.am
	* README
	* weather-iwin.c
	* weather-metar.c
	* weather-wx.c
	* weather.c: Update to reflect the merged files.

	A AUTHORS:
	R MAINTAINERS: A more accurate description of what
	I want to claim at this time. :-)

2005-12-04  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather-gconf.c
	* gweather-gconf.h: Add gweather_gconf_get_client
	to provide access to the GConfClient.

	* gweather-prefs.c: make gweather_prefs_load work
	correctly when called multiple times. The old
	radar url was not previously being freed.

2005-11-27  Philip Langdale  <philipl@mail.utexas.edu>

	Initial checkin of libgweatherprefs.

	A .cvsignore
	A ChangeLog
	A MAINTAINERS
	A Makefile.am
	A README: Usual building blocks.

	A gweather.schemas.in: Brought the schemas over
	unchanged from gweather.

	A gweatherprefs.pc.in: pkgconfig descriptor.

	A gweather-gconf.c
	A gweather-gconf.h: Primarily, this encapsulates
	the 'current path' notion in an identical way
	to libpanelapplet. It is also the new home of
	'weather_location_config_read' which files out
	a WeatherLocation struct based on the values in
	gconf.

	A gweather-prefs.c
	A gweather-prefs.h: This is, essentially unchanged,
	the 'gweather_pref_load' function along with the
	enum-to-string helpers it depends on. Obviously
	the gconf access now uses the gweather-gconf