@@ -1,3 +1,13 @@
+2005-12-31  Davyd Madeley  <davyd@madeley.id.au>
+
+       * weather-metar.c: (metar_tok_temp):
+       * weather.c: (calc_humidity): dewpoint is optional
+       Closes gweather bug 172711. Patch from Frank Solensky
+       <frank@solensky.org>
+
+       * gweather-gconf.c: looks like the last commit stopped this compiling,
+         fixed it up
+
 2005-12-31  Simos Xenitellis  <simos@gnome.org>
 
 	* gweather-gconf.c: Added translator comments for the DEFAULT_*
